# adb-agent

./: .env  .env.example  .gitignore  README.md  _verify.py  browser_main.py  main.py  pyproject.toml
.agents/skills/douban-skill/: SKILL.md
adb_agent/: agent.py  callbacks.py  planner.py  prompts.py
adb_agent/tools/: __init__.py  actions.py  adb.py  device_info.py  file_ops.py  memo.py  planner.py  planning.py  screen.py
adk_web_agents/: __init__.py  cli.py
adk_web_agents/adb_agent/: __init__.py  agent.py
adk_web_agents/browser_agent/: __init__.py  agent.py
agent_shared/: __init__.py  callbacks.py  constants.py  memo.py  planning.py  runtime.py
agent_team/: __init__.py  agent.py  main.py  prompts.py
browser_agent/: __init__.py  agent.py  callbacks.py  planner.py  prompts.py  runtime_registry.py  security.py
browser_agent/tools/: __init__.py  browser.py
douban_scraper/: __init__.py  cli.py  config.py  core.py  schemas.py
scraper_agent/: README.md  __init__.py  agent.py  db.py  douban_schema.json  init_db.py  prompts.py  tools.py
scraper_agent/.adk/: session.db
scraper_agent/tools/: __init__.py  database.py
skills_agent/: __init__.py  agent.py  prompts.py
skills_agent/.adk/: session.db
skills_agent/tools/: __init__.py  skills.py
tests/: conftest.py  test_adb_llm_annotation.py  test_adk_web_cli.py  test_agent_shared_tools.py  test_browser_async_regression.py  test_browser_callbacks.py  test_browser_cdp_live.py  test_browser_navigation_regression.py  test_browser_tools.py  test_crawl4ai.py  test_crawl4ai_douban.py
