[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adb-agent"
version = "0.2.0"
description = "Multi-agent system: ADB phone automation, web scraping, and skill orchestration via Google ADK"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-adk>=1.0.0",
    "httpx[socks]>=0.28.1",
    "beautifulsoup4>=4.12.3",
    "crawl4ai>=0.8.6",
    "Pillow>=10.0.0",
    "python-dotenv>=1.0.0",
    "asyncpg>=0.30.0",
    "typer>=0.12.0",
    "pydantic>=2.0.0",
]

[project.scripts]
adb-agent = "main:main"
agent-team = "agent_team.main:main"
douban-catalog = "douban_scraper.cli:main"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=0.25.0",
]

[tool.setuptools]
py-modules = ["main"]
include-package-data = false

[tool.setuptools.packages.find]
where = ["."]
include = ["adb_agent*", "skills_agent*", "scraper_agent*", "agent_team*", "douban_scraper*"]
exclude = ["tests*"]

[tool.uv]
package = true
