[project]
name = "adb-agent"
version = "0.1.0"
description = "Phone automation agent using Google ADK + Android ADB with pure vision approach"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-adk[extensions]==2.0.0a2",
    "litellm>=1.82.6",
    "Pillow>=10.0.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
adb-agent = "main:main"
